syntax = "proto3";

package middlewareApi;

option go_package = "./proto/middlewareApi;middlewareApi";

// MiddlewareApi 对外暴露服务
service MiddlewareApi {
  // 中间件操作API
  rpc AddMiddleware(Request) returns (Response) {}
  rpc DeleteMiddleware(Request) returns (Response) {}
  rpc UpdateMiddleware(Request) returns (Response) {}
  rpc FindMiddlewareByID(Request) returns (Response) {}
  rpc Call(Request) returns (Response) {}
  rpc FindAllMiddlewareByTypeID(Request) returns (Response) {}

  // 中间件类型API
  rpc AddMiddleType(Request) returns (Response) {}
  rpc DeleteMiddleType(Request) returns (Response) {}
  rpc UpdateMiddleType(Request) returns (Response) {}
  rpc FindMiddleTypeByID(Request) returns(Response) {}
  rpc FindAllMiddleType(Request) returns (Response) {}
}

message Pair {
  string key = 1;
  repeated string values = 2;
}

message Request {
  string method = 1;
  string path = 2;
  map<string, Pair> header = 3;
  map<string, Pair> get = 4;
  map<string, Pair> post = 5;
  string body = 6;
  string url = 7;
}

message Response {
  int32 statusCode = 1;
  map<string, Pair> header = 2;
  string body = 3;
}


